2010-04-10  Justin Davis  <juster@cpan.org>

	* CPAN Release 0.01